style: fix issue on mobile devices when using flex grow

--- a/packages/trader/src/sass/app/_common/layout/trader-layouts.scss
+++ b/packages/trader/src/sass/app/_common/layout/trader-layouts.scss
@@ -389,7 +389,6 @@ $FLOATING_HEADER_HEIGHT: 41px;
     flex-direction: column;
     height: 202px;
     position: relative;
-    flex: 1;
 
     &__content-loader {
         position: absolute;
